@@ -715,11 +715,19 @@ EXPDEFER=
 # SOCIAL-PC: Target a social at a player
 # SOCIAL-NPC: Target a social at an npc
 # SOCIAL-OTH: Target a social at a room or oneself
+# EMOTE-PC: Use of the EMOTE command with a player in the room
+# EMOTE-NPC: Use of the EMOTE command with only npcs in the room
+# EMOTE-OTHER: Use of the EMOTE command when you are by yourself
+# CHANNEL: Use of a communication channel except CHANNEL-NAMED
+# CHANNEL-NAMED(NAME1,NAME2,NAME3): Use of named communication channels **
 # GOAFK: the player goes AFK
 #  
 # * NO RXP is earned while Fatigued, Hungry or Thirsty.
+# ** There must be no spaces between CHANN.. and the final )
 # Example:
-# RPAWARDS=25% 8, INTRODUCE-PC 20, INTRODUCE-NPC 5, SAY-PC 5, SAY-NPC 1, SOCIAL-PC 10, SOCIAL-NPC 1, SOCIAL-OTH 1, GOAFK -25 
+# RPAWARDS=25% 8, INTRODUCE-PC 20, INTRODUCE-NPC 5, SAY-PC 5, SAY-NPC 1, SOCIAL-PC 10, \
+#          SOCIAL-NPC 1, SOCIAL-OTH 1, EMOTE-PC 5, EMOTE-NPC 1, EMOTE-OTH 1, GOAFK -25, \
+#          CHANNEL-NAMED(GOSSIP,CHAT) -10
 # Default is empty (role playing xp is disabled)
 RPAWARDS=
 
